<resources>
    <string name="app_name">Popular Movies</string>
    <string name="settings_menu_text">Settings</string>
    <string name="settings_title">Movie Settings</string>
    <string name="order_text">Order By</string>
    <string name="order_by_key" translatable="false">order_by</string>

    <string name="settings_order_by_most_popular_label">Most Popular</string>
    <string name="settings_order_by_most_rated_label">Most Rated</string>

    <string name="settings_order_by_most_rated_value">rating</string>
    <string name="settings_order_by_most_popular_value">famous</string>
    <string name="log_top_rated_settings">Top rated link chosen from settings.</string>
    <string name="log_top_rated_menu">Top rated link chosen.</string>
    <string name="original_title">Original Title</string>
    <string name="movie_summary">Movie Summary</string>
    <string name="vote_string">5.5</string>
    <string name="release_date">Release Date</string>
    <string name="image_path_string">Movie Image Path</string>
    <string name="string_date_release">Released On: </string>
    <string name="votePercent">out of 10</string>
    <string name="date_log">Release date added to movie.</string>
    <string name="content_authority">com.example.isabe.popularmovies</string>
    <string name="movie_string_id">Movie ID</string>
    <string name="backdrop_string_path">Backdrop Image Path</string>
    <string name="favorites_toast">Item added to favorites.</string>
    <string name="favorites_chosen">Favorites chosen.</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_delete_all">Delete All</string>
    <string name="image_key_from_json">imageKey</string>
</resources>
